--- a/index.html
+++ b/index.html
@@ -104,11 +104,13 @@ advancements have allowed for a greater improvement in these modern fighter jets
     <h3 id="Introduction">Introduction</h3>
     <p class="ex1">
         <pre>
+     <div id="Introduction_InText">
 The evolution of modern fighter jets is a key aspect of how the military has become better equipped for contemporary combat scenarios. From the initial concept and later design
 of subsonic aircraft during WWII to the modern fighters used today, there have been significant changes in aerodynamics, avionics, and systems. This has led to improved efficiency,
 enhanced strategies, and bolder ideas. From the start of the Cold War until now, it has greatly impacted the development of modern aircraft, influenced by the geographical locations
 of the U.S. and the Soviet Union. Additionally, it prompted a rapid increase in aircraft designs, improvements in avionics, and advancements in weaponry 
 (Shklarsky, 2023; Verrier, 2023). 
+        </div>
         </pre>
     </p>
 
@@ -116,6 +118,7 @@ of the U.S. and the Soviet Union. Additionally, it prompted a rapid increase in 
     <h3 id="HistoricalProgression">Historical Progression</h3>
     <p class="ex1">
         <pre>
+    <div id="Historical_InText">
 The overall development of a fighter jet can be placed into four distinct generations. The first-generation fighters, introduced from the early 1940s to the 1950s, were subsonic 
 and featured straight wings. They also contained very limited avionics and had inferior weapon systems compared to the later generations. Main examples of first-generation jets 
 include the iconic MiG-15 and F-86 Sabre, with their top speeds being approximately 1,075km/h and range of 500-600km (Shklarsky, 2023). These fighter jets had the purpose of being
@@ -125,7 +128,7 @@ of jets, which were able to reach supersonic speeds of 2,100 km/h. They develope
 use (Shklarsky, 2023). The third-generation fighters came about from around the 1970s to the late 1980s and were allowed to contain a variety of advanced avionics and fly-by-wire
 controls across a variety of roles in combat. Some notable fighter jets from this generation consisted of the F-15 Eagle, which had max speeds of 2,655 km/h and maximum ranges of 
 about 3,900 km (Shklarsky, 2023).
-
+    </div>
  <img src="640x425-F-15A-Eagle-05.jpg.webp" alt="Banner" width="600" height="450">
  Figure 1: An Example of an F-15 Eagle
         </pre>
@@ -135,6 +138,7 @@ about 3,900 km (Shklarsky, 2023).
     <h3 id="Aerodynamics">Aerodynamics and Lift-to-Drag Efficiency</h3>
     <p class="ex1">
         <pre>
+    <div id="Aerodynamics_InText">
 Aerodynamic revolutions, such as the Leading-Edge Vortex Controller’s (LEVCONs), have been essential towards improving fighter jets’ efficiency in aerial combat. LEVCON was designed
 to manipulate airflow to generate controlled vortices around the wings, which enhanced the lift-to-drag ratio under heavily turbulent conditions under high-G manoeuvrability. When
 conducted under simulations, it was noted that it gave a 5-8% improvement in lift and a corresponding increase in power output in the variable airflow conditions 
@@ -144,6 +148,7 @@ Figure 2: Demonstration of how vorticies on the Fighter Jet
 Other aerodynamic advances, including swept and delta-wing designs, have historically been crucial to enhancing supersonic stability. This can be seen in the third-generation 
 fighters demonstrating a 15-20% increase in sustained manoeuvrability performance relative to previous generations, which aids to have extended engagement in dogfights and has
 better control of the skies (Shklarsky, 2023).
+    </div>
         </pre>
     </p>
 
@@ -151,24 +156,28 @@ better control of the skies (Shklarsky, 2023).
     <h3 id="Avionics">Avionics and Sensor Integration</h3>
     <p class="ex1">
         <pre>
+    <div id="Avionics_InText">
 Modern fighter jets heavily rely on advanced avionics and sensor systems to be mechanically ahead in contemporary environmental battles. The fourth-generation fighters utilise
 digital fly-by-wire controls, infrared search and tracking systems, as well as networked communication suites. Bongers (2014) found that avionic improvements had provided a 
 20-30% increase in mission success rates in simulated combat scenarios, which was directly linked to the enhanced situational awareness and target tracking accuracy. In addition
 to the integrated avionics,it helped reduce pilot payload. This can be seen through the sensor fusion, which allows for real-time display of threats from multiple angles, allowing
 for a rapid response to the threat. This effectiveness gain is crucial in contemporary environments where rapid decision-making can determine the course of the success of the
 mission (Shklarsky, 2023).
-        </pre>
+      </div> 
+      </pre>
     </p>
 
     <!-- INTELLIGENCE, PROCUREMENT, STRATEGIC IMPACTS -->
     <h3 id="Intelligence">Intelligence, Procurement, and Strategic Impacts</h3>
     <p class="ex1">
         <pre>
+    <div id="Intelligence_InText">
 Technological innovations are closely linked to assessments and procurement practices. Early U.S. intelligence had overestimated the Soviet MiG-15 performance, predicting top 
 speeds to exceed 1,200km/h and having ranges over 700km. However, this was untrue, and the actual speeds were 1,075km/h and a range of 500km (Verrier,2023). As a result of 
 those misestimations, it promoted the U.S. development programs, increasing defence and expenditures and overall leading to greater technological development. It was also 
 found that procurement strategies affected the efficiency. Lu (2020) used epsilon-based measures to evaluate the fighter jet acquisition. The study concluded that the 
 optimised procurement could reduce overall acquisition time by 15-25%, which would help minimise cost overruns and increase mission readiness.
+        </div>
         </pre>
     </p>
 
@@ -176,22 +185,26 @@ optimised procurement could reduce overall acquisition time by 15-25%, which wou
     <h3 id="CostPerformance">Cost-Performance Trade-Offs</h3>
     <p class="ex1">
         <pre>
+    <div id="CostPerformance_InText">
 Technological advancements come with the price of economic considerations. Bongers (2014) demonstrated that increasing the maximum speed from Mach 2.0 to Mach 2.25 and avionics
 complexity led to an overall increase in cost of 20-30%. These investments led to a yield of measurable improvements in the combat effectiveness and including an overall 
 greater range as well as a higher payload capacity, and enhancing the survivability for the pilot. This is visible with the F-22’s payload capacity of 8,200kg and advanced 
 stealth features, which give it the ability to extend missions in high-threat areas while also maintaining operational safety (Shklarsky, 2023).
-        </pre>
+       </div>
+       </pre>
     </p>
 
     <!-- CONCLUSION -->
-    <h3 id="Conclusion">Conclusion</h3>
+   <h3 id="Conclusion">Conclusion</h3>
     <p class="ex1">
         <pre>
+   <div id="Conclusion_InText">
 Technological advances have had a profound impact on the efficiency of modern fighter jets in contemporary urban environments. Through historical progression from subsonic,
 radar-limited fighter jets to the high-tech, stealthy, sensor-integrated fighter jets used today, it demonstrates a clear path towards being fully effective during combat.
 From the combination of improvements in aerodynamics, avionic integration, and optimised procurement processes it helped to enhance the overall success of missions and the
 survivability of pilots. However, costs rise alongside technological improvement, the efficiency gains-measured in extended range, help improve payload management and reduce
 pilot workload and higher combat effectiveness, which aids in justifying large-scale investments.
+    </div>  
         </pre>
     </p>
 
@@ -286,11 +299,11 @@ Available at: https://www.pearlharboraviationmuseum.org/blog/mcdonnell-douglas-f
         return words.length;
     }
 
-    function displayTotalWordCount() {
-        const Abstract = countWordsInSection("Abstract_InText");
+    function displayTotalWordCount()
         const Introduction = countWordsInSection("Introduction_InText");
         const Historical = countWordsInSection("Historical_InText");
         const Aerodynamics = countWordsInSection("Aerodynamics_InText");
+        const Abstract = countWordsInSection("Intelligence_InText");
         const Avionics = countWordsInSection("Avionics_InText");
         const CostPerformance = countWordsInSection("CostPerformance_InText");
         const Conclusion = countWordsInSection("Conclusion_InText");
